# spotify-soundboard

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Procfile  README.md  cloudbuild.yaml  pyproject.toml
cloud-functions/data-update/utils/: apicall.py
data-update-cloud-function/: requirements.txt
data-update-cloud-function/utils/: dates.py  etl.py  io.py  s3.py  spotify.py
spotify_dash/: Dockerfile  app.py  dashapp.py  maintenance.py  settings.py
spotify_dash/core/: charts.py  content.py  views.py
spotify_dash/jobs/: create_assets.py  download_data.py  download_data2.py  maintain_data_asset.py
spotify_dash/processes/: apicall.py  charts.py  content.py  etl.py  views.py
spotify_dash/resources/interim/artists/: artist-to-genre-many.pkl  artist-to-genre-one.pkl
spotify_dash/utils/: apicall.py  dates.py  etl.py  io.py  s3.py  s3utils.py  spotify.py
tests/: test_spotify_dash.py
