[tool.poetry]
name = "spotify-dash"
version = "0.1.0"
description = ""
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
pandas = "^1.1.0"
numpy = "^1.19.1"
scipy = "^1.5.2"
plotly = "^4.9.0"
dash-core-components = "^1.10.2"
dash-html-components = "^1.0.3"
dash = "^1.14.0"
dash-bootstrap-components = {extras = ["pandas"], version = "^0.10.5"}
requests = "^2.24.0"
tqdm = "^4.48.2"
python-dotenv = "^0.14.0"
flask_caching = "^1.9.0"
brotli = "1.0.7"
gunicorn = "^20.0.4"
aiohttp = "^3.6.2"
scikit-learn = "^0.23.2"
aiofiles = "^0.5.0"
boto3 = "^1.15.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
